# sem3-web-susch

./: .gitignore  Makefile  deploy.sh  docker-compose.yaml  pyproject.toml
.github/workflows/: webdeploy.yaml
api/: Dockerfile  config.py  pyproject.toml  requirements.txt
api/database/: database.py  models.py
api/migrations/: env.py
api/migrations/versions/: 612f42939130_init.py
api/src/: app.py  utils.py
api/src/api/: airport.py  api.py  auth.py  booking.py  country.py  flight.py  office.py  user.py
dumps/: web_susch_2023-11-26_230635.sql
