[tool.poetry]
name = "web-susch"
version = "0.1.0"
description = "web-susch"
authors = ["poslam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
sqlalchemy = "^2.0.21"
python-dotenv = "^1.0.0"
uvicorn = "^0.23.2"
autopep8 = "^2.0.4"
greenlet = "^3.0.0"
pyjwt = "^2.8.0"
werkzeug = "^3.0.1"
aiomysql = "^0.2.0"
cryptography = "^41.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
